# mloray

./: README.md  db.txt  main.py  mloray.mmd  mm.md  prom.txt  pyproject.toml  qw.txt  zp.txt
tt/: .env.example  Dockerfile  Dockerfile.feast  docker-compose.yml  docker-compose2.yml  pyproject.toml  requirements.txt
tt/config/: data_sources.yaml
tt/config/environments/: dev.yaml  dev2.yaml  prod.yaml
tt/src/api/: dependencies.py  main.py  main2.py
tt/src/api/routers/: models.py  models2.py
tt/src/core/config/: database.py  settings.py  settings2.py
tt/src/core/features/: store.py
tt/src/core/models/: lifrcycle.py  registry.py  serving.py
tt/src/core/monitoring/: drift.py  quality.py  quality2.py  quality2_use.py
tt/src/core/training/: pipelines.py
tt/src/utils/: logging.py
